@@ -6,41 +6,44 @@ plugins {
 
 group 'ru.netology'
 version '1.0-SNAPSHOT'
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(11) // Указываем Java 11
+
+sourceCompatibility = 11
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
+repositories {
+    mavenCentral()
+}
+
+allure {
+    version = '2.20.1'
+    useJUnit5 {
+        version = '2.20.1'
     }
-        sourceCompatibility = 11
-        compileJava.options.encoding = 'UTF-8'
-        compileTestJava.options.encoding = 'UTF-8'
+}
 
-        allure {
-            version = '2.20.1'
-            useJUnit5 {
-                version = '2.20.1'
-            }
-        }
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testImplementation 'com.codeborne:selenide:6.17.2'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+}
+tasks.withType(JavaCompile) {
+    options.compilerArgs += [
+            "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
+    ]
+}
 
-        repositories {
-            mavenCentral()
-        }
-        dependencies {
-            testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-            testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-            testImplementation 'com.codeborne:selenide:5.19.0'
-            testImplementation 'com.github.javafaker:javafaker:1.0.2'
-            implementation 'io.qameta.allure:allure-selenide:2.20.1'
-            implementation 'io.github.bonigarcia:webdrivermanager:5.6.2'
-
-            compileOnly 'org.projectlombok:lombok:1.18.30'
-            annotationProcessor 'org.projectlombok:lombok:1.18.30'
-            testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
-
-
-
-            test {
-                useJUnitPlatform()
-                systemProperty 'selenide.headless', System.getProperty('selenide.headless')
-            }
-        }
-    }
+test {
+    useJUnitPlatform()
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+}
